Fix vertical alignment of buttons

--- a/src/components/Sidebar/Properties/PropertyOwnerHeader.scss
+++ b/src/components/Sidebar/Properties/PropertyOwnerHeader.scss
@@ -21,6 +21,7 @@
 .rightButton {
   height: fit-content;
   background: rgba(0, 0, 0, 0); // Completely transparent
+  vertical-align: top;
 }
 
 .menuButton {
